app/sludge.css
* {
	box-sizing: border-box;
	border: none;
	margin: 0;
	padding: 0;
}

html, body, #root, .main {
	height: 100%;
	background: #f9f9f9;
	font-family: Helvetica, sans-serif;
	font-size: 12px;
}

div:focus {outline:0;}

form input {
    padding: 10px;
    font-family: Helvetica, sans-serif;
    font-weight: 300;
    font-size: 12px;
    border: 1px solid #aaa;
    border-radius: 4px;
}

label {
	margin: auto 0;
}

.main {
	display: flex;
	flex-flow: column nowrap;
}

.react-tabs {
	flex: 1;
	display: flex;
	flex-flow: column nowrap;
}

.react-tabs__tab-list {
	flex: 0;
}

.react-tabs__tab-panel {
	flex: 1;
}

.transactionAmount {
	text-align: right;
}

.container {
	display: flex;
	width: 100%
}

.container div {
	flex: 1;
}

.grid {
	display: grid;
	grid-gap: 0.5em;
	grid-template-columns: repeat(2, 1fr);
}

.filterBar {
	display: flex;
	margin: 10px 5px;
}

.filterBar > div {
	margin: 0 5px;
	flex: 0 1;
}

#bucketForm {
	grid-template-rows: repeat(4, 1fr) auto;
}

.fa {
	color: green;
}

.button {
    background-color: #4CAF50;
    color: white;
    padding: 10px 24px;
	margin: 5px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
	font-size: 12px;
	font-family: 'system-ui';
	border-radius:4px;
	cursor: pointer;
}

.glyph {
	cursor: pointer;
}

.upload {
	position: relative;
}

.upload input {
	opacity: 0;
	position: absolute;
	right: 0px;
	top: 0px;
	width: 100%;
	height: 100%;
}

.react-autosuggest__container {
  position: relative;
}

.react-autosuggest__input {
  width: 100%;
  height: 50px;
  padding: 10px 20px;
  font-family: Helvetica, sans-serif;
  font-weight: 300;
  font-size: 12px;
  border: 1px solid #aaa;
  border-radius: 4px;
}

.react-autosuggest__input--focused {
  outline: none;
}

.react-autosuggest__input--open {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.react-autosuggest__suggestions-container {
  display: none;
}

.react-autosuggest__suggestions-container--open {
  display: block;
  position: absolute;
  top: 49px;
  width: 100%;
  border: 1px solid #aaa;
  background-color: #fff;
  font-family: Helvetica, sans-serif;
  font-weight: 300;
  font-size: 12px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  z-index: 2;
}

.react-autosuggest__suggestions-list {
  padding: 0;
  list-style-type: none;
}

.react-autosuggest__suggestion {
  cursor: pointer;
  padding: 10px 20px;
}

.react-autosuggest__suggestion--highlighted {
  background-color: #ddd;
}

.budgets {
	display: flex;
}

.budget {
	flex: auto;
	text-align: center;
	font-size: 1.5em;
	padding: 10px;
}

.altRow {
	background: #f0f0f0;
}

.redRow {
	color: darkred;
	background: #fff4f4;
}

.greenRow {
	color: darkgreen;
	background: #f4fff4;
}

.summaryRow {
	color: inherit;
	background: none;
	border-top-style: solid;
	border-top-width: thin;
	font-weight: bold;
}

.ReactVirtualized__Table {
  display: inline-block;
}

.ReactVirtualized__Table__headerColumn {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 0;
}

.ReactVirtualized__Table__headerTruncatedText {
  flex: auto;
}

.DragHandle {
  flex: 0 0 16px;
  z-index: 2;
  cursor: col-resize;
  color: #0085ff;
}
.DragHandle:hover {
  background-color: rgba(0, 0, 0, 0.1);
}

.DragHandleActive,
.DragHandleActive:hover {
  color: #0b6fcc;
  z-index: 3;
}

.DragHandleIcon {
  flex: 0 0 12px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.DefaultBarrel {
	height: 100%;
	padding: 0 33%;
	display: flex;
	flex-direction: column;
    justify-content: center;
    align-items: center;
	background-color: #4CAF5020
}

.BarrelPicker {
	width: 100%;
	display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.BarrelOption {
	display: flex;
    height: 3em;
    width: 100%;
	margin: 5px;
	border-style: solid;
	border-width: thin;
    justify-content: center;
    align-items: center;
	cursor: pointer;
	background-color: white;
}

.BarrelOption:hover {
	background-color: #4CAF50;
}

.bucketPicker {
	flex: 1 1 auto;
}

.fa-stop-circle {
	margin: auto 5px;
}

